fixed bg image not showing issue

--- a/app/assets/stylesheets/_banner.scss
+++ b/app/assets/stylesheets/_banner.scss
@@ -1,7 +1,7 @@
-// This applies from 0px to 768px
+// This applies from 0px to 768px or mobile
 .banner {
     height: 430px;
-    // background-image: linear-gradient(135deg, rgba(0, 0, 0, 0.2), #000), url('https://github.com/court-tek/restaurant-railsblob/main/app/assets/images/AdobeStock_162254112.jpeg?raw=true');
+    background: linear-gradient(135deg, rgba(0, 0, 0, 0.2), #000);
     background-image: linear-gradient(135deg, rgba(0, 0, 0, 0.2), #000), url('AdobeStock_162254112.jpeg');
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -18,7 +18,7 @@
         h1 {
             text-transform: uppercase;
             color: var(--blanco);
-            font-weight: 300;
+            font-weight: 500;
             // clamp (min, cur, upper)
             font-size: clamp(2rem, 6vw ,3.5rem);
         }
@@ -53,7 +53,7 @@
     
 }
 
-// This applies from 768px onwards
+// This applies from 768px onwards or tablet +
 @media (min-width: 768px) {
     .banner {
         height: 100vh;
@@ -68,7 +68,7 @@
             h1 {
                 text-transform: uppercase;
                 color: var(--blanco);
-                font-weight: 300;
+                font-weight: 600;
                 // clamp (min, cur, upper)
                 font-size: clamp(2rem, 6vw ,3.5rem);
             }
