--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -21,9 +21,12 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Raleway', sans-serif;
     color: #1e1e1e;
-    height: 100%;
+}
+
+.heading {
+    font-family: 'Bodoni Moda', serif;
 }
 
 // mixins
